# VC4CL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Readme.md  cmake_uninstall_vc4cl.cmake.in  cross_build.sh
.circleci/: build_num.py  clang-format-diff.sh  config.yml  get_url.py
cmake/: RaspberryPi.cmake  crosscompile.cmake  flags.cmake  icd.cmake  installation.cmake  packaging.cmake  sanitizers.cmake  vc4cc.cmake
doc/: Benchmarks.md  Images.md  OpenCL-CTS.md  Requirements.md  Runtime.txt  RuntimeLibrary.md  Security.md
src/: Allocator.cpp  Allocator.h  Bitfield.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandQueue.cpp  CommandQueue.h  Context.cpp  Context.h  Device.cpp  Device.h  Event.cpp  Event.h  Image.cpp  Image.h  Kernel.cpp  Kernel.h  Mailbox.cpp  Mailbox.h  Memory.cpp  Memory.h  Object.h  ObjectTracker.cpp  ObjectTracker.h  PerformanceCounter.cpp  PerformanceCounter.h  Platform.cpp  Platform.h  Program.cpp  Program.h  SVM.cpp  SVM.h  TextureConfiguration.h  TextureFormat.cpp  TextureFormat.h  V3D.cpp  V3D.h  barriers.cpp  cl_ext_vc4cl.h  (+16 more)
src/hal/: Mailbox.cpp  Mailbox.h  V3D.cpp  V3D.h  VCHI.cpp  VCHI.h  VCSM.cpp  VCSM.h  emulator.cpp  emulator.h  hal.cpp  hal.h  no_vcsm_sources.list  sources.list  userland.cpp  userland.h
src/shared/: BinaryHeader.cpp  BinaryHeader.h
test/: CMakeLists.txt  TestBuffer.cpp  TestBuffer.h  TestBuiltins.cpp  TestBuiltins.h  TestCommandQueue.cpp  TestCommandQueue.h  TestContext.cpp  TestContext.h  TestDevice.cpp  TestDevice.h  TestEvent.cpp  TestEvent.h  TestExecutions.cpp  TestExecutions.h  TestExtension.cpp  TestExtension.h  TestImage.cpp  TestImage.h  TestKernel.cpp  TestKernel.h  TestPlatform.cpp  TestPlatform.h  TestProgram.cpp  TestProgram.h  TestSystem.cpp  TestSystem.h  constant_load.cl  fft2_2.cl  fibonacci.cl  hello_world.cl  hello_world_constant.cl  hello_world_vector.cl  hello_world_vector.hex  hello_world_vector.ir  sources.list  test.cpp  test_barrier.cl  test_branches.cl  test_builtins.cl  (+5 more)
tools/: CMakeLists.txt  DumpAnalyzer.cpp  V3DInfo.cpp  V3DProfile.cpp  common.h  get_url.py  sources.list
